# gsplines_ros2

gsplines_msgs/: CMakeLists.txt  package.xml
gsplines_msgs/action/: FollowJointGSpline.action
gsplines_msgs/msg/: JointGSpline.msg
